--- a/src/pages/login.css
+++ b/src/pages/login.css
@@ -1,4 +1,4 @@
-.login {
+.login,.bookingpage {
 	background: linear-gradient(to bottom, #ffffffc7, #ffffffd7),
 		url("../assets/medicare.jpg");
 	height: 100vh;
