--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
 body {
-	background-color: white;
+  background: url("../src/assets/headerbanner.png") !important;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
